tests/ui/regions/regions-variance-invariant-use-covariant.stderr
error: lifetime may not live long enough
  --> $DIR/regions-variance-invariant-use-covariant.rs:17:12
   |
LL | fn use_<'b>(c: Invariant<'b>) {
   |         -- lifetime `'b` defined here
...
LL |     let _: Invariant<'static> = c;
   |            ^^^^^^^^^^^^^^^^^^ type annotation requires that `'b` must outlive `'static`
   |
   = note: requirement occurs because of the type `Invariant<'_>`, which makes the generic argument `'_` invariant
   = note: the struct `Invariant<'a>` is invariant over the parameter `'a`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance

error: aborting due to 1 previous error

